Add End Point Patient and Unit Test
