# OpenApi.json
@@ -351,6 +351,77 @@
                     }
                 }
             }
+        },
+        "/patients":{
+            "get":{
+                "tags": ["Patients API"],
+                "description": "Get All Patients",
+                "summary": "Get All Patients",
+                "responses": {
+                    "200":{
+                        "description": "Succeess Get All Patient",
+                        "content": {
+                            "application/json":{
+                                "schema":{
+                                    "type": "object",
+                                    "properties": {
+                                        "meta":{
+                                            "$ref": "#/components/schemas/Meta"
+                                        },
+                                        "data":{
+                                            "type": "array",
+                                            "items":{
+                                                "type": "object",
+                                                "properties": {
+                                                    "id":{
+                                                        "type": "integer"
+                                                    },
+                                                    "name":{
+                                                        "type": "string"
+                                                    },
+                                                    "gender":{
+                                                        "type": "string"
+                                                    },
+                                                    "photo":{
+                                                        "type": "string"
+                                                    },
+                                                    "phone":{
+                                                        "type": "string"
+                                                    },
+                                                    "address":{
+                                                        "type": "string"
+                                                    }
+                                                }
+                                            }
+                                        }
+                                    }
+                                },
+                                "examples": {
+                                    "success":{
+                                        "value":{
+                                            "meta":{
+                                                "message":"Get Success",
+                                                "status":"success",
+                                                "code":200
+                                            },
+                                            "data":[
+                                                {
+                                                    "id": 1,
+                                                    "name": "patient1",
+                                                    "gender": "Perempuan",
+                                                    "photo": "/imges/patient.jpg",
+                                                    "phone": "0895619258715",
+                                                    "address": "link harum manis rt04/02 no 166 kel cirimekar kec.cibinong Kab.Bogor"
+                                                }
+                                            ]
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "components": {
